# aspect-lib-libxml-reproduction

./: .bazelrc  .gitignore  .npmrc  MODULE.bazel  docker-compose.yml  package.json  pnpm-lock.yaml
app/: BUILD.bazel  README.md  angular.json  defs.bzl  package.json
app/src/: index.html
app/src/app/: app.component.spec.ts  app.component.ts
