# Javascript Rules Module

bazel_dep(
    name = "aspect_rules_js",
    version = "1.42.1",
)

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
bazel_dep(name = "rules_nodejs", version = "5.8.2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")

node.toolchain(node_version = "18.13.0")
#################################

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)

npm.npm_translate_lock(
    name = "npm",
    #    no_optional = True,
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(npm, "npm")

# Typescript Rules Module

bazel_dep(
    name = "aspect_rules_ts",
    version = "2.1.0",
)

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")

# Bazel Utilities Module

bazel_dep(
    name = "aspect_bazel_lib",
    version = "2.1.0",
)

# SWC.rs as Typescript Transpiler Module

bazel_dep(
    name = "aspect_rules_swc",
    version = "1.1.0",
)
