load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

load(":defs.bzl", "ng_app", "ng_config")

package(default_visibility = ["//visibility:public"])

# Link npm packages

# The Angular application
ng_app(
    name = "app",
    project_name = "derp",
    deps = [
    ],
)

ng_config(
    name = "ng-config",
)
